--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,25 @@
 {
     "manifest_version": 2,
     "name": "School++",
+    "short_name": "S++",
     "description": "Piattaforma per la gestione scolastica",
     "author": "Mattia Sinisi",
-    "icons": {
-        "128": "./img/logo.svg"
-    },
-    "default_locale": "en"
+    "icons": [
+        {
+            "src": "/img/logo.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/img/logo.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        }
+    ],
+    "default_locale": "it",
+    "start_url": "/",
+    "background_color": "#ffffff",
+    "display": "standalone",
+    "scope": "/",
+    "theme_color": "#ff5100"
 }
