--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
         "axios": "^0.19",
-        "bootstrap": "^4.4.1",
         "bulma": "^0.8.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -23,9 +22,10 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "serialize-javascript": "^2.1.1",
         "svelte": "^3.16.1",
         "svelte-loader": "^2.13.4",
-        "vue-template-compiler": "^2.6.10",
-        "serialize-javascript": "^2.1.1"
-    }
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {}
 }
