--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
     "background_color": "#ffffff",
     "display": "standalone",
     "scope": "/",
-    "theme_color": "#ff5100"
+    "theme_color": "rgb(32, 32, 32)"
 }
